force-app/main/default/objects/redwing__Criterion_Task__c/redwing__Criterion_Task__c.object-meta.xml
<CustomObject>
    <label>Criterion Task</label>
    <nameField>
        <displayFormat>CTN-{0}</displayFormat>
        <label>Criterion Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criterion Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>