force-app/main/default/objects/redwing__Criterion_Task__c/fields/redwing__Criterion__c.field-meta.xml
<CustomField>
    <fullName>redwing__Criterion__c</fullName>
    <label>Criterion</label>
    <referenceTo>redwing__Criterion__c</referenceTo>
    <relationshipLabel>Criterion Tasks</relationshipLabel>
    <relationshipName>Criterion_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>