force-app/main/default/objects/redwing__Criterion_Task__c/fields/redwing__Learning_Activity__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Activity</label>
    <referenceTo>redwing__Training_Activity__c</referenceTo>
    <relationshipLabel>Criterion Tasks</relationshipLabel>
    <relationshipName>Criterion_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>